# compilers-sindarin

./: .gitignore  README.md  pyproject.toml
notebooks/: anytree_tutorial.ipynb
src/trabalho_sindarin/: sindarin_dict.py  sindarin_lexer.py  sindarin_parser.py
