[project]
name = "trabalho-sindarin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Felipe Curcio", email = "felipe_nieto010@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anytree>=2.12.1",
    "graphviz>=0.20.3",
    "ipykernel>=6.29.5",
    "ply>=3.11",
]

[project.scripts]
trabalho-sindarin = "trabalho_sindarin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
